ajustando controllers
